--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,8 +42,8 @@
 
 <div class="content" role="main">
   <!-- Next Steps -->
-  <h2>Next Steps</h2>
-  <p>What do you want to do next with your app?</p>
+  <h2>Secuencia de fibonacci</h2>
+  <p>Ingresa un numero entero para calcular la secuencia de fibonacci</p>
 
   <div class="card-container">
 
